Feat : added all the file including stash file

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Shivesh</h1>
     <h1>This is a important line</h1>
     Some change everyone have to adapt
+    <h5>Not so important line at the moment</h5>
 </body>
 </html>
